# Feeder

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/schemas/com.nononsenseapps.feeder.db.room.AppDatabase/: 40.json  41.json
app/src/fdroid/java/com/nononsenseapps/feeder/aicore/: OnDeviceSummarizerImpl.kt
app/src/main/cpp/: CMakeLists.txt  logging.h
app/src/main/java/com/arm/aichat/: InferenceEngine.kt
app/src/main/java/com/arm/aichat/internal/: InferenceEngineImpl.kt
app/src/main/java/com/nononsenseapps/feeder/aicore/: LlamaCppSummarizer.kt  OnDeviceSummarizer.kt
app/src/main/java/com/nononsenseapps/feeder/archmodel/: Repository.kt  SettingsStore.kt
app/src/main/java/com/nononsenseapps/feeder/db/: Constants.kt
app/src/main/java/com/nononsenseapps/feeder/db/room/: AppDatabase.kt  Feed.kt  SyncRemote.kt
app/src/main/java/com/nononsenseapps/feeder/di/: ArchModelModule.kt
app/src/main/java/com/nononsenseapps/feeder/model/: RssLocalSync.kt
app/src/main/java/com/nononsenseapps/feeder/model/opml/: OPMLImporter.kt
app/src/main/java/com/nononsenseapps/feeder/openai/: OpenAIApi.kt
app/src/main/java/com/nononsenseapps/feeder/sync/: FeederSync.kt  RestBodies.kt  SyncRestClient.kt
app/src/main/java/com/nononsenseapps/feeder/ui/: MainActivity.kt  ManageSettingsActivity.kt
app/src/main/res/values/: strings.xml
app/src/play/java/com/nononsenseapps/feeder/aicore/: OnDeviceSummarizerImpl.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: README.md  build-apk.ps1  build-fdroid.ps1  build-play.ps1
(+17 files in other folders)
